# langfuse-chat

./: .gitignore  .pre-commit-config.yaml  DOCS.md  SYSTEM_OVERVIEW.howto.md  SYSTEM_OVERVIEW.html  SYSTEM_OVERVIEW.md  crew_app.py  crewai_langfuse.py  docs.html  pyproject.toml  requirements.txt  run_experiment.py  seed_prompts.py  skills-lock.json
.agents/: README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
agents/: fitness_analyst.yaml  nutrition_advisor.yaml  researcher.yaml  workout_designer.yaml
config/environments/: dev.yaml  prod.yaml  staging.yaml
config/evalops/: thresholds.yaml
config/evals/: eval_criteria.yaml
core/crews/: __init__.py  base.py  common.py  fitness_training.py  fitness_training.yaml  researcher.py  researcher.yaml
core/observability/: __init__.py  base.py  datadog_connector.py  langfuse_connector.py  span_limits.py
core/observability/context/: __init__.py  callbacks.py  enriched.py  run_context.py  session.py
core/prompts/: __init__.py  loader.py
crews/: __init__.py  base.py  common.py  fitness_crew.py  research_crew.py
evalops/: __init__.py  crew_runner.py  dataset_loader.py  flow_introspect.py  manifest.py  metric_config.py  pdf_export.py  promotion_gate.py  regression.py  reporter.py  scorer.py
evalops/runners/: __init__.py  cli.py  pipeline.py  streamlit_tab.py
evalops/templates/: report.md.j2
flows/: __init__.py  fitness_flow.py  research_flow.py
guardrails/: __init__.py  fitness_analysis_guardrail.py
observability/: datadog_connector.py
scripts/: bootstrap.py  list_prompt_keys.py  md_to_html.py  run_experiment.py  seed_prompts.py
skills/progressive-overload/: SKILL.md
tasks/: fitness_analysis_task.yaml  fitness_nutrition_task.yaml  fitness_workout_task.yaml  research_task.yaml
tests/: test_namespacing.py  test_pull_llm_text.py
tools/: __init__.py  health_report_reader_tool.py
